DragonSalesForceProject2/force-app/main/default/objects/Offer__c/Offer__c.object-meta.xml
<CustomObject>
    <label>Offer</label>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>