DragonSalesForceProject2/force-app/main/default/objects/Offer__c/fields/Potential_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Potential_Buyer__c</fullName>
    <label>Potential Buyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>